kubernetes/2_config/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        version: v1
    spec:
      containers:
        - name: api
          image: muzmov/webnotes-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
