kubernetes/2_config/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      containers:
        - name: auth
          image: muzmov/webnotes-auth
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
