kubernetes/2_config/postgres-user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      volumes:
        - name: postgres-storage-user
          persistentVolumeClaim: 
            claimName: db-pvc
      containers:
        - name: postgres-user
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage-user
              mountPath: /var/lib/postgresql/data
              subPath: postgres
