kubernetes/2_config/postgres-main-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-main
spec:
  type: ClusterIP
  selector:
    app: postgres-main
  ports:
    - port: 5432
      targetPort: 5432
      name: tcp-postgres-main
