kubernetes/2_config/postgres-main-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-main-nodeport
spec:
  type: NodePort
  selector:
    app: postgres-main
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 31432
      name: tcp-postgres-main-nodeport
