kubernetes/2_config/postgres-user-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
spec:
  type: ClusterIP
  selector:
    app: postgres-user
  ports:
    - port: 5432
      targetPort: 5432
      name: tcp-postgres-user
