kubernetes/2_config/postgres-user-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-user-nodeport
spec:
  type: NodePort
  selector:
    app: postgres-user
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 32432
      name: tcp-postgres-user-nodeport
