kubernetes/2_config/istio-ingress-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "*"
  gateways:
    - ingressgateway
  http:
    - name: api-route
      match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api
            port:
              number: 8080
    - name: auth-route
      match:
        - uri:
            prefix: /oauth
      route:
        - destination:
            host: auth
            port:
              number: 8080
    - name: nginx-route
      route:
        - destination:
            host: nginx
            port:
              number: 8080
